# PDCSummerSchool23

./: CITATION.cff  CMakeLists.txt  README.md
exercise_CMake/: CMakeLists.txt  hello.cpp
include/: energy_storms_mpi.hpp  energy_storms_sequential.hpp
project/: CMakeLists.txt  energy_storms_cuda.cu  energy_storms_hip  energy_storms_mpi  energy_storms_omp  energy_storms_seq  energystorms_container.def
project/energy_storms_seq.dSYM/Contents/: Info.plist
project/energy_storms_seq.dSYM/Contents/Resources/DWARF/: energy_storms_seq
project/include/: energy_storms_cuda.hpp  energy_storms_mpi.hpp  energy_storms_omp.hpp  energy_storms_sequential.hpp
project/project/: energy_storms_omp  energy_storms_seq
project/src/: energy_storms_cuda.cpp  energy_storms_cuda_functions.cu  energy_storms_mpi.cpp  energy_storms_mpi_functions.cpp  energy_storms_omp  energy_storms_omp.cpp  energy_storms_omp_functions.cpp  energy_storms_sequential.cpp  energy_storms_sequential_functions.cpp
project/tests/: testCUDARunCalculation.cpp  testMPIRunCalculation.cpp  testOMPRunCalculation.cpp
src/: energy_storms_sequential.cpp  energy_storms_sequential_functions.cpp
tests/: testMPIRunCalculation.cpp
